# AI_IT_AGENT

./: .gitignore  AGENTS.md  Cargo.toml  README.en.md  README.md  SOUL.md  TOOLS.md  build.rs
skills/exchange-automation/: SKILL.md
skills/exchange-automation/scripts/: connect-exo.ps1  export-mailbox-size.ps1  export-permissions.ps1  trace-message.ps1
src/: callbacks.rs  checkpoint.rs  config.rs  context.rs  crypto.rs  distill.rs  error.rs  external_tools.rs  heartbeat.rs  main.rs  memory.rs  model_store.rs  permission.rs  runner.rs  scheduler.rs  server.rs  session.rs
src/agent/: event.rs  llm_agent.rs  mod.rs
src/log/: mod.rs
src/model/: mod.rs  openai.rs
src/skill/: mod.rs  types.rs
src/tool/: app_launch.rs  browser_cdp.rs  browser_open.rs  browser_skill.rs  cron_manage.rs  file_ops.rs  ir_account.rs  ir_analyzer.rs  ir_driver.rs  ir_eventlog.rs  ir_evtx_parse.rs  ir_file.rs  ir_log_parse.rs  ir_network.rs  ir_pcap_analyze.rs  ir_persistence.rs  ir_process.rs  ir_report.rs  ir_scan.rs  ir_weblog_scan.rs  malware_deep.rs  malware_scan.rs  mcp_client.rs  memory_md.rs  mod.rs  shell_exec.rs  sys_eventlog.rs  sys_info.rs  sys_process.rs  sys_remind.rs  sys_service.rs  todo_update.rs  web_fetch.rs
src/tool/malware_analysis/: basic.rs  mod.rs  models.rs  pe.rs
src/web/: mod.rs
static/: app.js  highlight.min.js  index.html  style.css
