[package]
name = "rust-agent"
version = "0.1.0"
edition = "2021"
description = "Local AI agent with WebSocket gateway, multi-model support, and Windows system tools"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "stream", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
async-stream = "0.3"
async-trait = "0.1"
glob = "0.3"
mime_guess = "2"
tokio-stream = "0.1"
rusqlite = { version = "0.31", features = ["bundled"] }
rmcp = { version = "1", features = ["client", "transport-child-process", "client-side-sse", "transport-streamable-http-client", "transport-streamable-http-client-reqwest", "reqwest", "schemars"] }
aes-gcm = "0.10"
sha2 = "0.10"
getrandom = "0.3"
chromiumoxide = "0.9"
# Malware analysis dependencies (from hacksguard)
goblin = "0.9"
memmap2 = "0.9"
rayon = "1.10"
boreal = { version = "1.1.0", features = ["serialize"] }
iced-x86 = "1.21.0"
base64 = "0.22.1"
md-5 = "0.10"
sha1 = "0.10"

[profile.release]
strip = true
opt-level = 3
lto = true
